--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header class="main-header">
 			<div class="container main-header__container">
 				<section class="main-header__logo">
-					<a href="#" class="main-header__logo-link">
+					<a href="index.html" class="main-header__logo-link">
 						<svg class="main-header__logo-svg">
 							<use xlink:href="img/svg/sprite.svg#logo"></use>
 						</svg>
@@ -35,7 +35,7 @@
 							0800 211 927
 						</span>
 						<div class="contacts__socials">
-							<a class="contacts__link">
+							<a class="contacts__link" href="https://www.facebook.com/">
 								<svg class="contacts__facebook">
 									<use xlink:href="img/svg/sprite.svg#facebook-small"></use>
 								</svg>
@@ -46,19 +46,19 @@
 						<nav class="main-navigation__nav">
 							<ul class="main-navigation__list">
 								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">about us</a>
+									<a href="pages/about-us.html" class="main-navigation__link">about us</a>
 								</li>
 								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">services</a>
+									<a href="pages/services.html" class="main-navigation__link">services</a>
 								</li>
 								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">team</a>
+									<a href="pages/team.html" class="main-navigation__link">team</a>
 								</li>
 								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">publications</a>
+									<a href="pages/publications.html" class="main-navigation__link">publications</a>
 								</li>
 								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">contact</a>
+									<a href="pages/contacts.html" class="main-navigation__link">contact</a>
 								</li>
 							</ul>
 						</nav>
@@ -95,63 +95,82 @@
 		</section>
 		<section class="advantages">
 			<div class="advantages__container container">
-				<a href="#" class="advantages__link link">services</a>
+				<a href="pages/services.html" class="advantages__link link">services</a>
 				<h2 class="advantages__title">What can we do better than others?</h2>
 				<div class="advantages__block">
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">IT and e-commerce</h3>
-						<p class="advantage__text">An endless stream of contracts, tax issues, labor relations,
-							corporate papers - legal work distracts you from doing business. But there is not much work
-							to do to hire an in-house lawyer.</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">IT and e-commerce</h3>
+							<p class="advantage__text">An endless stream of contracts, tax issues, labor relations,
+								corporate papers - legal work distracts you from doing business. But there is not much
+								work
+								to do to hire an in-house lawyer.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Comprehensive daily
-							legal support</h3>
-						<p class="advantage__text">In addition, over time, the work will become the same type and
-							uninteresting for a full-time lawyer. And we know very well how difficult it is to find a
-							good candidate with experience in the field of information technology in Ukraine.</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Comprehensive daily
+								legal support</h3>
+							<p class="advantage__text">In addition, over time, the work will become the same type and
+								uninteresting for a full-time lawyer. And we know very well how difficult it is to find
+								a
+								good candidate with experience in the field of information technology in Ukraine.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/coprorate-relationships.svg" alt="it-and-ecommerce"
-								class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Structuring corporate relationships</h3>
-						<p class="advantage__text">Instead of just providing legal services, we will hire a lawyer or a
-							whole team that will fit into the daily life of your company.</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/coprorate-relationships.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Structuring corporate relationships</h3>
+							<p class="advantage__text">Instead of just providing legal services, we will hire a lawyer
+								or a
+								whole team that will fit into the daily life of your company.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/building-relations.svg" alt="it-and-ecommerce"
-								class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Building contractual relations</h3>
-						<p class="advantage__text">Once a week, or week after month, you have your own lawyer by your
-							side. Anyone in the company can catch it at the coffee maker and just talk about current
-							affairs instead of waiting for update status.</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/building-relations.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Building contractual relations</h3>
+							<p class="advantage__text">Once a week, or week after month, you have your own lawyer by
+								your
+								side. Anyone in the company can catch it at the coffee maker and just talk about current
+								affairs instead of waiting for update status.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/protection.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Protection of business, intellectual property</h3>
-						<p class="advantage__text">And all the other time he will work on new diverse projects, so he
-							will definitely not stop in professional development. One way or another, all Axon Partners
-							will work for you instead of a corporate lawyer.</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/protection.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Protection of business, intellectual property</h3>
+							<p class="advantage__text">And all the other time he will work on new diverse projects, so
+								he
+								will definitely not stop in professional development. One way or another, all Axon
+								Partners
+								will work for you instead of a corporate lawyer.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Judicial representation</h3>
-						<p class="advantage__text">Is it a small, medium-sized company or a market leader? Local
-							business or multinational company? Do you have your own legal department or not?</p>
+						<a class="advantage__link" href="pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Judicial representation</h3>
+							<p class="advantage__text">Is it a small, medium-sized company or a market leader? Local
+								business or multinational company? Do you have your own legal department or not?</p>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -168,7 +187,7 @@
 									class="slide__image">
 							</div>
 							<div class="slide__description">
-								<a href="#" class="slide__link link">команда</a>
+								<a href="pages/team.html" class="slide__link link">команда</a>
 								<blockquote class="slide__quote">Ми звикли брати на себе відповідальність та завжди
 									гарантуємо чесну, вчасну допомогу, навіть у ситуаціях, коли більшість безсилі.
 								</blockquote>
@@ -218,55 +237,78 @@
 		<div class="companies__container">
 			<p class="companies__title">They already trust us</p>
 			<div class="companies__block">
-				<div class="companies__item companies__item--dark-blue"><img src="img/png/hillel-logo.png" alt="hillel-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-green"><img src="img/png/wanna-biz-logo.png" alt="wanna-biz-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-orange"><img src="img/png/tapgerine-logo.png" alt="tapgerine-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--violet"><img src="img/png/3d-look-logo.png" alt="3d-look-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--orange"><img src="img/png/orangear-logo.png" alt="orangear-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--light-grey"><img src="img/png/adtelligent-logo.png" alt="adtelligent-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-red"><img src="img/png/clicky-logo.png" alt="clicky-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--light-blue"><img src="img/png/ecoleasing-logo.png" alt="ecoleasing-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--grey"><img src="img/png/infratek-logo.png" alt="infratek-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-violet"><img src="img/png/city-park-logo.png" alt="city-park-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dirty"><img src="img/png/art-print-logo.png" alt="art-print-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--black"><img src="img/png/ulitimate-card-logo.png" alt="ulitimate-card-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-blue"><img src="img/png/hillel-logo.png"
+						alt="hillel-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-green"><img src="img/png/wanna-biz-logo.png"
+						alt="wanna-biz-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-orange"><img src="img/png/tapgerine-logo.png"
+						alt="tapgerine-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--violet"><img src="img/png/3d-look-logo.png"
+						alt="3d-look-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--orange"><img src="img/png/orangear-logo.png"
+						alt="orangear-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-grey"><img src="img/png/adtelligent-logo.png"
+						alt="adtelligent-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-red"><img src="img/png/clicky-logo.png"
+						alt="clicky-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-blue"><img src="img/png/ecoleasing-logo.png"
+						alt="ecoleasing-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--grey"><img src="img/png/infratek-logo.png"
+						alt="infratek-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-violet"><img src="img/png/city-park-logo.png"
+						alt="city-park-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dirty"><img src="img/png/art-print-logo.png"
+						alt="art-print-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--black"><img src="img/png/ulitimate-card-logo.png"
+						alt="ulitimate-card-logo" class="companies__img"></div>
 			</div>
 		</div>
 	</section>
 	<section class="publications publications--main">
 		<div class="publications__container container">
-			<a href="#" class="publications__link link">Publications</a>
+			<a href="pages/publications.html" class="publications__link link">Publications</a>
 			<h2 class="publications__title">We have something to tell</h2>
 			<div class="publications__block">
 				<article class="publications__item publication">
-					<div class="publication__img-wrap">
-						<img src="img/png/planning.png" alt="equity" class="publication__img">
-					</div>
-					<div class="publication__description">
-						<h4 class="publication__title">Equity associate</h4>
-						<span class="publication__date">April 22</span>
-						<p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
-					</div>
+					<a class="publication__link" href="pages/publications-inner.html">
+						<div class="publication__img-wrap">
+							<img src="img/png/planning.png" alt="equity" class="publication__img">
+						</div>
+						<div class="publication__description">
+							<h4 class="publication__title">Equity associate</h4>
+							<span class="publication__date">April 22</span>
+							<p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it
+								happened. Before entering my parents told me that if I…</p>
+						</div>
+					</a>
 				</article>
 				<article class="publications__item publication">
-					<div class="publication__img-wrap">
-						<img src="img/png/gdpr.png" alt="penalty" class="publication__img">
-					</div>
-					<div class="publication__description">
-						<h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h4>
-						<span class="publication__date">September 29</span>
-						<p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
-					</div>
-				</article>				
+					<a class="publication__link" href="pages/publications-inner.html">
+						<div class="publication__img-wrap">
+							<img src="img/png/gdpr.png" alt="penalty" class="publication__img">
+						</div>
+						<div class="publication__description">
+							<h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google
+								and others for violating the GDPR</h4>
+							<span class="publication__date">September 29</span>
+							<p class="publication__text">And why the recovery of 50 million euros could be a fateful
+								precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+						</div>
+					</a>
+				</article>
 				<article class="publications__item publication">
-					<div class="publication__img-wrap">
-						<img src="img/png/people.png" alt="testament" class="publication__img">
-					</div>
-					<div class="publication__description">
-						<h4 class="publication__title">Millennial Testament</h4>
-						<span class="publication__date">August 19</span>
-						<p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
-					</div>
+					<a class="publication__link" href="pages/publications-inner.html">
+						<div class="publication__img-wrap">
+							<img src="img/png/people.png" alt="testament" class="publication__img">
+						</div>
+						<div class="publication__description">
+							<h4 class="publication__title">Millennial Testament</h4>
+							<span class="publication__date">August 19</span>
+							<p class="publication__text">What and how modern vloggers, opinion leaders and
+								crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks
+								like this: an apartment in…</p>
+						</div>
+					</a>
 				</article>
 			</div>
 		</div>
@@ -279,9 +321,11 @@
 					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
 				</div>
 				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="img/svg/sprite.svg#facebook"></use>	
-					</svg>
+					<a class="contacts__link" href="https://www.facebook.com/">
+						<svg class="contacts__facebook">
+							<use xlink:href="../img/svg/sprite.svg#facebook"></use>
+						</svg>
+					</a>
 					<span class="contacts__phone">0800 211 927</span>
 					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
 				</div>
