--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -13,7 +13,7 @@
     <header class="main-header main-header--white">
         <div class="container main-header__container">
             <section class="main-header__logo">
-                <a href="#" class="main-header__logo-link">
+                <a href="../index.html" class="main-header__logo-link">
                     <svg class="main-header__logo-svg">
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
@@ -37,7 +37,7 @@
                         0800 211 927
                     </span>
                     <div class="contacts__socials">
-                        <a class="contacts__link">
+                        <a class="contacts__link" href="https://www.facebook.com/">
                             <svg class="contacts__facebook">
                                 <use xlink:href="../img/svg/sprite.svg#facebook"></use>
                             </svg>
@@ -48,19 +48,19 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link main-navigation__link--active">about us</a>
+                                <a href="../pages/about-us.html" class="main-navigation__link main-navigation__link--active">about us</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">services</a>
+                                <a href="../pages/services.html" class="main-navigation__link">services</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">team</a>
+                                <a href="../pages/team.html" class="main-navigation__link">team</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">publications</a>
+                                <a href="../pages/publications.html" class="main-navigation__link">publications</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">contact</a>
+                                <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -136,7 +136,7 @@
         <section class="achievements">
             <div class="achievements__container container">
                 <h4 class="achievements__title">achievements</h4>
-                <div class="swiper">
+                <div class="swiper swiper--about-us">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="achievements__slide">
@@ -188,9 +188,11 @@
 					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
 				</div>
 				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-					</svg>
+					<a class="contacts__link" href="https://www.facebook.com/">
+					    <svg class="contacts__facebook">
+    						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+    					</svg>
+					</a>
 					<span class="contacts__phone">0800 211 927</span>
 					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
 				</div>
