--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -13,7 +13,7 @@
     <header class="main-header main-header--white">
         <div class="container main-header__container">
             <section class="main-header__logo">
-                <a href="#" class="main-header__logo-link">
+                <a href="../index.html" class="main-header__logo-link">
                     <svg class="main-header__logo-svg">
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
@@ -37,7 +37,7 @@
                         0800 211 927
                     </span>
                     <div class="contacts__socials">
-                        <a class="contacts__link">
+                        <a class="contacts__link" href="https://www.facebook.com/">
                             <svg class="contacts__facebook">
                                 <use xlink:href="../img/svg/sprite.svg#facebook"></use>
                             </svg>
@@ -48,19 +48,19 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">about us</a>
+                                <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">services</a>
+                                <a href="../pages/services.html" class="main-navigation__link">services</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">team</a>
+                                <a href="../pages/team.html" class="main-navigation__link">team</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">publications</a>
+                                <a href="../pages/publications.html" class="main-navigation__link">publications</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link main-navigation__link--active">contact</a>
+                                <a href="../pages/contacts.html" class="main-navigation__link main-navigation__link--active">contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -76,10 +76,12 @@
                     <p class="contacts-page__phone">0800 211 927</p>
                     <p class="contacts-page__email">contact@forstudy.space</p>
                     <div class="contacts-page__social">
-                        <svg class="contacts-page__svg">
-                            <use xlink:href="../img/svg/sprite.svg#facebook"></use>
-                        </svg>
-                        <p class="contacts-page__facebook-text">Our page<br>on facebook</p>
+                        <a href="https://www.facebook.com/" class="contacts-page__link">
+                            <svg class="contacts-page__svg">
+                                <use xlink:href="../img/svg/sprite.svg#facebook"></use>
+                            </svg>
+                            <p class="contacts-page__facebook-text">Our page<br>on facebook</p>
+                        </a href="facebook.com">
                     </div>
                 </div>
                 <div class="contacts-and-form__form-block">
@@ -105,12 +107,14 @@
                     <a class="contacts__link-map"><span class="contacts__map">On map</span></a>
                 </div>
                 <div class="contacts__phone-and-net">
-                    <svg class="contacts__facebook">
-                        <use xlink:href="../img/svg/sprite.svg#facebook"></use>
-                    </svg>
-                    <span class="contacts__phone">0800 211 927</span>
-                    <a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
-                </div>
+					<a class="contacts__link" href="https://www.facebook.com/">
+					    <svg class="contacts__facebook">
+    						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+    					</svg>
+					</a>
+					<span class="contacts__phone">0800 211 927</span>
+					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+				</div>
             </div>
             <div class="main-footer__copyrights">
                 <p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
