--- a/pages/publications-inner.html
+++ b/pages/publications-inner.html
@@ -13,7 +13,7 @@
     <header class="main-header main-header--white">
         <div class="container main-header__container">
             <section class="main-header__logo">
-                <a href="#" class="main-header__logo-link">
+                <a href="../index.html" class="main-header__logo-link">
                     <svg class="main-header__logo-svg">
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
@@ -37,7 +37,7 @@
                         0800 211 927
                     </span>
                     <div class="contacts__socials">
-                        <a class="contacts__link">
+                        <a class="contacts__link" href="https://www.facebook.com/">
                             <svg class="contacts__facebook">
                                 <use xlink:href="../img/svg/sprite.svg#facebook"></use>
                             </svg>
@@ -48,19 +48,19 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">about us</a>
+                                <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">services</a>
+                                <a href="../pages/services.html" class="main-navigation__link">services</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">team</a>
+                                <a href="../pages/team.html" class="main-navigation__link">team</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link main-navigation__link--active">publications</a>
+                                <a href="../pages/publications.html" class="main-navigation__link main-navigation__link--active">publications</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">contact</a>
+                                <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -126,17 +126,17 @@
                         France, CNIL considered it.</p>
                 </div>
                 <div class="article__socials">
-                    <a class="article__social-link">
+                    <a class="article__social-link" href="https://www.facebook.com/">
                         <svg class="article__social-svg">
                             <use xlink:href="../img/svg/sprite.svg#facebook-cubic"></use>
                         </svg>
                     </a>
-                    <a class="article__social-link">
+                    <a class="article__social-link" href="https://twitter.com/?lang=ru">
                         <svg class="article__social-svg">
                             <use xlink:href="../img/svg/sprite.svg#twitter"></use>
                         </svg>
                     </a>
-                    <a class="article__social-link">
+                    <a class="article__social-link" href="https://ru.linkedin.com/">
                         <svg class="article__social-svg">
                             <use xlink:href="../img/svg/sprite.svg#linkedin"></use>
                         </svg>
@@ -150,34 +150,40 @@
                 <h2 class="publications__title">Recommended</h2>
                 <div class="publications__block">
                     <article class="publications__item publication">
-                        <div class="publication__img-wrap">
-                            <img src="../img/png/planning.png" alt="equity" class="publication__img">
-                        </div>
-                        <div class="publication__description">
-                            <h4 class="publication__title">Equity associate</h4>
-                            <span class="publication__date">April 22</span>
-                            <p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
-                        </div>
+                        <a class="publication__link" href="../pages/publications-inner.html">
+                            <div class="publication__img-wrap">
+                                <img src="../img/png/planning.png" alt="equity" class="publication__img">
+                            </div>
+                            <div class="publication__description">
+                                <h5 class="publication__title">Equity associate</h5>
+                                <span class="publication__date">April 22</span>
+                                <p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
+                            </div>
+                        </a>
                     </article>
                     <article class="publications__item publication">
-                        <div class="publication__img-wrap">
-                            <img src="../img/png/gdpr.png" alt="penalty" class="publication__img">
-                        </div>
-                        <div class="publication__description">
-                            <h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h4>
-                            <span class="publication__date">September 29</span>
-                            <p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
-                        </div>
+                        <a class="publication__link" href="../pages/publications-inner.html">
+                            <div class="publication__img-wrap">
+                                <img src="../img/png/gdpr.png" alt="penalty" class="publication__img">
+                            </div>
+                            <div class="publication__description">
+                                <h5 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h5>
+                                <span class="publication__date">September 29</span>
+                                <p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+                            </div>
+                        </a>
                     </article>				
                     <article class="publications__item publication">
-                        <div class="publication__img-wrap">
-                            <img src="../img/png/people.png" alt="testament" class="publication__img">
-                        </div>
-                        <div class="publication__description">
-                            <h4 class="publication__title">Millennial Testament</h4>
-                            <span class="publication__date">August 19</span>
-                            <p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
-                        </div>
+                        <a class="publication__link" href="../pages/publications-inner.html">
+                            <div class="publication__img-wrap">
+                                <img src="../img/png/people.png" alt="testament" class="publication__img">
+                            </div>
+                            <div class="publication__description">
+                                <h5 class="publication__title">Millennial Testament</h5>
+                                <span class="publication__date">August 19</span>
+                                <p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
+                            </div>
+                        </a>
                     </article>
                 </div>
             </div>
@@ -191,9 +197,11 @@
 					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
 				</div>
 				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-					</svg>
+					<a class="contacts__link" href="https://www.facebook.com/">
+					    <svg class="contacts__facebook">
+    						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+    					</svg>
+					</a>
 					<span class="contacts__phone">0800 211 927</span>
 					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
 				</div>
