--- a/pages/services-inner.html
+++ b/pages/services-inner.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service</title>
-    <link rel="stylesheet" href="../css/style.min.css"/>
+    <link rel="stylesheet" href="../css/style.min.css" />
 </head>
+
 <body>
     <div class="wrapper wrapper-services">
-		<header class="main-header">
-			<div class="container main-header__container">
-				<section class="main-header__logo">
-					<a href="#" class="main-header__logo-link">
-						<svg class="main-header__logo-svg">
-							<use xlink:href="../img/svg/sprite.svg#logo"></use>
-						</svg>
-					</a>
+        <header class="main-header">
+            <div class="container main-header__container">
+                <section class="main-header__logo">
+                    <a href="../index.html" class="main-header__logo-link">
+                        <svg class="main-header__logo-svg">
+                            <use xlink:href="../img/svg/sprite.svg#logo"></use>
+                        </svg>
+                    </a>
                     <svg class="main-header__logo-svg-slash">
                         <use xlink:href="../img/svg/sprite.svg#slash"></use>
                     </svg>
                     <span class="main-header__logo-route main-header__logo-route--white">services</span>
-				</section>
-				<div class="main-header__contacts-and-menu">
-					<section class="main-header__contacts contacts">
-						<div class="contacts__languages">
-							<a href="#" class="contacts__language">ук</a>
-							<a href="#" class="contacts__language">ру</a>
-							<a href="#" class="contacts__language contacts__language--active">en</a>
-						</div>
-						<span class="contacts__address">
-							Kyiv, Mechnikova str, 14/1
-						</span>
-						<span class="contacts__phone">
-							0800 211 927
-						</span>
-						<div class="contacts__socials">
-							<a class="contacts__link">
-								<svg class="contacts__facebook">
-									<use xlink:href="../img/svg/sprite.svg#facebook-small"></use>
-								</svg>
-							</a>
-						</div>
-					</section>
-					<section class="main-header__menu main-navigation">
-						<nav class="main-navigation__nav">
-							<ul class="main-navigation__list">
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">about us</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">services</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">team</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">publications</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">contact</a>
-								</li>
-							</ul>
-						</nav>
-					</section>
-				</div>
-			</div>
-		</header>
+                </section>
+                <div class="main-header__contacts-and-menu">
+                    <section class="main-header__contacts contacts">
+                        <div class="contacts__languages">
+                            <a href="#" class="contacts__language">ук</a>
+                            <a href="#" class="contacts__language">ру</a>
+                            <a href="#" class="contacts__language contacts__language--active">en</a>
+                        </div>
+                        <span class="contacts__address">
+                            Kyiv, Mechnikova str, 14/1
+                        </span>
+                        <span class="contacts__phone">
+                            0800 211 927
+                        </span>
+                        <div class="contacts__socials">
+                            <a class="contacts__link" href="https://www.facebook.com/">
+                                <svg class="contacts__facebook">
+                                    <use xlink:href="../img/svg/sprite.svg#facebook-small"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </section>
+                    <section class="main-header__menu main-navigation">
+                        <nav class="main-navigation__nav">
+                            <ul class="main-navigation__list">
+                                <li class="main-navigation__item">
+                                    <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/services.html" class="main-navigation__link main-navigation__link--active">services</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/team.html" class="main-navigation__link">team</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/publications.html" class="main-navigation__link">publications</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </section>
+                </div>
+            </div>
+        </header>
         <section class="service">
             <div class="service__container container">
                 <div class="service__description">
@@ -74,83 +76,110 @@
                         <img src="../img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce" class="service__image-svg">
                     </div>
                     <h1 class="service__title">IT and e-commerce</h1>
-                    <p class="service__text">An endless stream of contracts, tax issues, labor relations, corporate papers - legal work distracts you from doing business. But there is not much work to do to hire an in-house lawyer.</p>
-                    <p class="service__text">In addition, over time, the work will become the same type and uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good candidate with experience in the field of information technology in Ukraine.</p>
+                    <p class="service__text">An endless stream of contracts, tax issues, labor relations, corporate
+                        papers - legal work distracts you from doing business. But there is not much work to do to hire
+                        an in-house lawyer.</p>
+                    <p class="service__text">In addition, over time, the work will become the same type and
+                        uninteresting for a full-time lawyer. And we know very well how difficult it is to find a good
+                        candidate with experience in the field of information technology in Ukraine.</p>
                     <div class="button service__button">Free consultation</div>
                 </div>
                 <div class="service__details">
                     <h3 class="service__list-title">Services in this area:</h3>
                     <ul class="service__list">
-                        <li class="service__list-item">support of investment projects for the development of port infrastructure;</li>
-                        <li class="service__list-item">support of procedures related to the lease of state property in the port;</li>
-                        <li class="service__list-item">certification of GTS, entering information about them in mandatory databases and registers;</li>
-                        <li class="service__list-item">support of procedures related to confirmation of the status of port operator, maritime agent, foreign sailing line;</li>
-                        <li class="service__list-item">registration of permits for the construction of port terminals;</li>
-                        <li class="service__list-item">support of procedures related to the inclusion of the company within the port;</li>
-                        <li class="service__list-item">registration of permit and other mandatory documentation required for carrying out activities in the port (emission permit, conclusion on EIA, RTC, etc.);</li>
-                        <li class="service__list-item">appeals against actions related to the illegal imposition of services in the port by monopoly companies.</li>
+                        <li class="service__list-item">support of investment projects for the development of port
+                            infrastructure;</li>
+                        <li class="service__list-item">support of procedures related to the lease of state property in
+                            the port;</li>
+                        <li class="service__list-item">certification of GTS, entering information about them in
+                            mandatory databases and registers;</li>
+                        <li class="service__list-item">support of procedures related to confirmation of the status of
+                            port operator, maritime agent, foreign sailing line;</li>
+                        <li class="service__list-item">registration of permits for the construction of port terminals;
+                        </li>
+                        <li class="service__list-item">support of procedures related to the inclusion of the company
+                            within the port;</li>
+                        <li class="service__list-item">registration of permit and other mandatory documentation required
+                            for carrying out activities in the port (emission permit, conclusion on EIA, RTC, etc.);
+                        </li>
+                        <li class="service__list-item">appeals against actions related to the illegal imposition of
+                            services in the port by monopoly companies.</li>
                     </ul>
                 </div>
             </div>
         </section>
-	</div>
+    </div>
     <section class="publications publications--main publications--service">
         <div class="publications__container container">
             <a href="#" class="publications__link link">Publications</a>
             <h2 class="publications__title">Recommended</h2>
             <div class="publications__block">
                 <article class="publications__item publication">
-                    <div class="publication__img-wrap">
-                        <img src="../img/png/planning.png" alt="equity" class="publication__img">
-                    </div>
-                    <div class="publication__description">
-                        <h4 class="publication__title">Equity associate</h4>
-                        <span class="publication__date">April 22</span>
-                        <p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</p>
-                    </div>
+                    <a class="publication__link" href="../pages/publications-inner.html">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/planning.png" alt="equity" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h5 class="publication__title">Equity associate</h5>
+                            <span class="publication__date">April 22</span>
+                            <p class="publication__text">I'm a jun on projects. I am a co-owner of a law firm. How it
+                                happened. Before entering my parents told me that if I…</p>
+                        </div>
+                    </a>
                 </article>
                 <article class="publications__item publication">
-                    <div class="publication__img-wrap">
-                        <img src="../img/png/gdpr.png" alt="penalty" class="publication__img">
-                    </div>
-                    <div class="publication__description">
-                        <h4 class="publication__title">Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</h4>
-                        <span class="publication__date">September 29</span>
-                        <p class="publication__text">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
-                    </div>
-                </article>				
+                    <a class="publication__link" href="../pages/publications-inner.html">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/gdpr.png" alt="penalty" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h5 class="publication__title">Penalty for the Good Corporation: what will happen to Google
+                                and others for violating the GDPR</h5>
+                            <span class="publication__date">September 29</span>
+                            <p class="publication__text">And why the recovery of 50 million euros could be a fateful
+                                precedent According to Mind.ua January 21 National Commission for Data Protection.</p>
+                        </div>
+                    </a>
+                </article>
                 <article class="publications__item publication">
-                    <div class="publication__img-wrap">
-                        <img src="../img/png/people.png" alt="testament" class="publication__img">
-                    </div>
-                    <div class="publication__description">
-                        <h4 class="publication__title">Millennial Testament</h4>
-                        <span class="publication__date">August 19</span>
-                        <p class="publication__text">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</p>
-                    </div>
+                    <a class="publication__link" href="../pages/publications-inner.html">
+                        <div class="publication__img-wrap">
+                            <img src="../img/png/people.png" alt="testament" class="publication__img">
+                        </div>
+                        <div class="publication__description">
+                            <h5 class="publication__title">Millennial Testament</h5>
+                            <span class="publication__date">August 19</span>
+                            <p class="publication__text">What and how modern vloggers, opinion leaders and
+                                crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks
+                                like this: an apartment in…</p>
+                        </div>
+                    </a>
                 </article>
             </div>
         </div>
     </section>
     <footer class="main-footer">
-		<div class="main-footer__container container">
-			<div class="main-footer__contacts contacts">
-				<div class="contacts__address-and-map">
-					<span class="contacts__address">Kyiv, Mechnikova str, 14/1</span>
-					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
-				</div>
-				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-					</svg>
-					<span class="contacts__phone">0800 211 927</span>
-					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
-				</div>
-			</div>
-			<div class="main-footer__copyrights">
-				<p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
-			</div>
-		</div>
-	</footer>
+        <div class="main-footer__container container">
+            <div class="main-footer__contacts contacts">
+                <div class="contacts__address-and-map">
+                    <span class="contacts__address">Kyiv, Mechnikova str, 14/1</span>
+                    <a class="contacts__link-map"><span class="contacts__map">On map</span></a>
+                </div>
+                <div class="contacts__phone-and-net">
+                    <a class="contacts__link" href="https://www.facebook.com/">
+                        <svg class="contacts__facebook">
+                            <use xlink:href="../img/svg/sprite.svg#facebook"></use>
+                        </svg>
+                    </a>
+                    <span class="contacts__phone">0800 211 927</span>
+                    <a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+                </div>
+            </div>
+            <div class="main-footer__copyrights">
+                <p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
