--- a/pages/team-inner.html
+++ b/pages/team-inner.html
@@ -11,7 +11,7 @@
     <header class="main-header main-header--white">
         <div class="container main-header__container">
             <section class="main-header__logo">
-                <a href="#" class="main-header__logo-link">
+                <a href="../index.html" class="main-header__logo-link">
                     <svg class="main-header__logo-svg">
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
@@ -35,7 +35,7 @@
                         0800 211 927
                     </span>
                     <div class="contacts__socials">
-                        <a class="contacts__link">
+                        <a class="contacts__link" href="https://www.facebook.com/">
                             <svg class="contacts__facebook">
                                 <use xlink:href="../img/svg/sprite.svg#facebook"></use>
                             </svg>
@@ -46,19 +46,19 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">about us</a>
+                                <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">services</a>
+                                <a href="../pages/services.html" class="main-navigation__link">services</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link main-navigation__link--active">team</a>
+                                <a href="../pages/team.html" class="main-navigation__link main-navigation__link--active">team</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">publications</a>
+                                <a href="../pages/publications.html" class="main-navigation__link">publications</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">contact</a>
+                                <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -76,7 +76,7 @@
                     <div class="person__contacts">
                         <span class="person__position">Equity partner, Attorney-at-law</span>
                         <a href="#" class="person__email">kobzar@forstudy.space</a>
-                        <a href="#" class="person__linkedin">LinkedIn profile</a>
+                        <a href="https://ru.linkedin.com/" class="person__linkedin">LinkedIn profile</a>
                     </div>
                     <p class="person__text">Oksana heads the practice of international trade and shipping. He specializes in resolving disputes related to the purchase and sale of raw materials and transportation of goods by sea.</p>
                     <p class="person__text">Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping agents, container lines, as well as international banks and P&I clubs.</p>
@@ -96,12 +96,14 @@
                     <a class="contacts__link-map"><span class="contacts__map">On map</span></a>
                 </div>
                 <div class="contacts__phone-and-net">
-                    <svg class="contacts__facebook">
-                        <use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-                    </svg>
-                    <span class="contacts__phone">0800 211 927</span>
-                    <a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
-                </div>
+					<a class="contacts__link" href="https://www.facebook.com/">
+					    <svg class="contacts__facebook">
+    						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+    					</svg>
+					</a>
+					<span class="contacts__phone">0800 211 927</span>
+					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
+				</div>
             </div>
             <div class="main-footer__copyrights">
                 <p class="main-footer__copyrights-text">© 2021 HLEGAL Law company, LLC</p>
