--- a/pages/team.html
+++ b/pages/team.html
@@ -11,7 +11,7 @@
     <header class="main-header main-header--white">
         <div class="container main-header__container">
             <section class="main-header__logo">
-                <a href="#" class="main-header__logo-link">
+                <a href="../index.html" class="main-header__logo-link">
                     <svg class="main-header__logo-svg">
                         <use xlink:href="../img/svg/sprite.svg#logo"></use>
                     </svg>
@@ -35,7 +35,7 @@
                         0800 211 927
                     </span>
                     <div class="contacts__socials">
-                        <a class="contacts__link">
+                        <a class="contacts__link" href="https://www.facebook.com/">
                             <svg class="contacts__facebook">
                                 <use xlink:href="../img/svg/sprite.svg#facebook"></use>
                             </svg>
@@ -46,19 +46,19 @@
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">about us</a>
+                                <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">services</a>
+                                <a href="../pages/services.html" class="main-navigation__link">services</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link main-navigation__link--active">team</a>
+                                <a href="../pages/team.html" class="main-navigation__link main-navigation__link--active">team</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">publications</a>
+                                <a href="../pages/publications.html" class="main-navigation__link">publications</a>
                             </li>
                             <li class="main-navigation__item">
-                                <a href="#" class="main-navigation__link">contact</a>
+                                <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -73,32 +73,32 @@
                 <div class="team__block">
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/oleksandrovskiy.png" alt="Alexander Alexandrovsky">
-                        <a class="teammate__name">Alexander Alexandrovsky</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Alexander Alexandrovsky</a>
                         <span class="teammate__position">Managing partner</span>
                     </div>
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/patrikov.png" alt="Evgeny Patrikov">
-                        <a class="teammate__name">Evgeny Patrikov</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Evgeny Patrikov</a>
                         <span class="teammate__position">Equity partner, Attorney-at-law</span>
                     </div>
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/malnik.png" alt="Vladislav Melnik">
-                        <a class="teammate__name">Vladislav Melnik</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Vladislav Melnik</a>
                         <span class="teammate__position">Associate</span>
                     </div>
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/binn.png" alt="Sergey Binn">
-                        <a class="teammate__name">Sergey Binn</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Sergey Binn</a>
                         <span class="teammate__position">Associate</span>
                     </div>
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/kobzar.png" alt="Oksana Kobzar">
-                        <a class="teammate__name">Oksana Kobzar</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Oksana Kobzar</a>
                         <span class="teammate__position">Equity partner, Attorney-at-law</span>
                     </div>
                     <div class="team__teammate teammate">
                         <img class="teammate__img" src="../img/png/team/wolk.png" alt="Julia Wolk">
-                        <a class="teammate__name">Julia Wolk</a>
+                        <a href="../pages/team-inner.html" class="teammate__name">Julia Wolk</a>
                         <span class="teammate__position">Associate, Attorney-at-law</span>
                     </div>
                 </div>
@@ -113,9 +113,11 @@
 					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
 				</div>
 				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-					</svg>
+					<a class="contacts__link" href="https://www.facebook.com/">
+					    <svg class="contacts__facebook">
+    						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
+    					</svg>
+					</a>
 					<span class="contacts__phone">0800 211 927</span>
 					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
 				</div>
