--- a/pages/services.html
+++ b/pages/services.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-    <link rel="stylesheet" href="../css/style.min.css"/>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Services</title>
+	<link rel="stylesheet" href="../css/style.min.css" />
 </head>
+
 <body>
-    <div class="wrapper wrapper-services">
+	<div class="wrapper wrapper-services">
 		<header class="main-header">
 			<div class="container main-header__container">
 				<section class="main-header__logo">
-					<a href="#" class="main-header__logo-link">
+					<a href="../index.html" class="main-header__logo-link">
 						<svg class="main-header__logo-svg">
 							<use xlink:href="../img/svg/sprite.svg#logo"></use>
 						</svg>
 					</a>
-                    <svg class="main-header__logo-svg-slash">
-                        <use xlink:href="../img/svg/sprite.svg#slash"></use>
-                    </svg>
-                    <span class="main-header__logo-route main-header__logo-route--white">services</span>
+					<svg class="main-header__logo-svg-slash">
+						<use xlink:href="../img/svg/sprite.svg#slash"></use>
+					</svg>
+					<span class="main-header__logo-route main-header__logo-route--white">services</span>
 				</section>
 				<div class="main-header__contacts-and-menu">
 					<section class="main-header__contacts contacts">
@@ -36,7 +38,7 @@
 							0800 211 927
 						</span>
 						<div class="contacts__socials">
-							<a class="contacts__link">
+							<a class="contacts__link" href="https://www.facebook.com/">
 								<svg class="contacts__facebook">
 									<use xlink:href="../img/svg/sprite.svg#facebook-small"></use>
 								</svg>
@@ -44,25 +46,25 @@
 						</div>
 					</section>
 					<section class="main-header__menu main-navigation">
-						<nav class="main-navigation__nav">
-							<ul class="main-navigation__list">
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">about us</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">services</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">team</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">publications</a>
-								</li>
-								<li class="main-navigation__item">
-									<a href="#" class="main-navigation__link">contact</a>
-								</li>
-							</ul>
-						</nav>
+                        <nav class="main-navigation__nav">
+                            <ul class="main-navigation__list">
+                                <li class="main-navigation__item">
+                                    <a href="../pages/about-us.html" class="main-navigation__link">about us</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/services.html" class="main-navigation__link main-navigation__link--active">services</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/team.html" class="main-navigation__link">team</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/publications.html" class="main-navigation__link">publications</a>
+                                </li>
+                                <li class="main-navigation__item">
+                                    <a href="../pages/contacts.html" class="main-navigation__link">contact</a>
+                                </li>
+                            </ul>
+                        </nav>
 					</section>
 				</div>
 			</div>
@@ -73,84 +75,116 @@
 				<h2 class="advantages__title">What can we do better than others?</h2>
 				<div class="advantages__block">
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">IT and e-commerce</h3>
-						<p class="advantage__text">An endless stream of contracts, tax issues, labor relations,
-							corporate papers - legal work distracts you from doing business. But there is not much work
-							to do to hire an in-house lawyer.</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">IT and e-commerce</h3>
+							<p class="advantage__text">An endless stream of contracts, tax issues, labor relations,
+								corporate papers - legal work distracts you from doing business. But there is not much
+								work
+								to do to hire an in-house lawyer.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Comprehensive daily
-							legal support</h3>
-						<p class="advantage__text">In addition, over time, the work will become the same type and
-							uninteresting for a full-time lawyer. And we know very well how difficult it is to find a
-							good candidate with experience in the field of information technology in Ukraine.</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Comprehensive daily
+								legal support</h3>
+							<p class="advantage__text">In addition, over time, the work will become the same type and
+								uninteresting for a full-time lawyer. And we know very well how difficult it is to find
+								a
+								good candidate with experience in the field of information technology in Ukraine.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/coprorate-relationships.svg" alt="it-and-ecommerce"
-								class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Structuring corporate relationships</h3>
-						<p class="advantage__text">Instead of just providing legal services, we will hire a lawyer or a
-							whole team that will fit into the daily life of your company.</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/coprorate-relationships.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Structuring corporate relationships</h3>
+							<p class="advantage__text">Instead of just providing legal services, we will hire a lawyer
+								or a
+								whole team that will fit into the daily life of your company.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/building-relations.svg" alt="it-and-ecommerce"
-								class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Building contractual relations</h3>
-						<p class="advantage__text">Once a week, or week after month, you have your own lawyer by your
-							side. Anyone in the company can catch it at the coffee maker and just talk about current
-							affairs instead of waiting for update status.</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/building-relations.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Building contractual relations</h3>
+							<p class="advantage__text">Once a week, or week after month, you have your own lawyer by
+								your
+								side. Anyone in the company can catch it at the coffee maker and just talk about current
+								affairs instead of waiting for update status.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/protection.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Protection of business, intellectual property</h3>
-						<p class="advantage__text">And all the other time he will work on new diverse projects, so he
-							will definitely not stop in professional development. One way or another, all Axon Partners
-							will work for you instead of a corporate lawyer.</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/protection.svg" alt="it-and-ecommerce"
+									class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Protection of business, intellectual property</h3>
+							<p class="advantage__text">And all the other time he will work on new diverse projects, so
+								he
+								will definitely not stop in professional development. One way or another, all Axon
+								Partners
+								will work for you instead of a corporate lawyer.</p>
+						</a>
 					</div>
 					<div class="advantage">
-						<div class="advantage__image-wrap">
-							<img src="../img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
-						</div>
-						<h3 class="advantage__title">Judicial representation</h3>
-						<p class="advantage__text">Is it a small, medium-sized company or a market leader? Local
-							business or multinational company? Do you have your own legal department or not?</p>
+						<a class="advantage__link" href="../pages/services-inner.html">
+							<div class="advantage__image-wrap">
+								<img src="../img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
+							</div>
+							<h3 class="advantage__title">Judicial representation</h3>
+							<p class="advantage__text">Is it a small, medium-sized company or a market leader? Local
+								business or multinational company? Do you have your own legal department or not?</p>
+						</a>
 					</div>
 				</div>
 			</div>
-		</section>        
+		</section>
 	</div>
-    <section class="companies companies--services">
+	<section class="companies companies--services">
 		<div class="companies__container">
 			<p class="companies__title">They already trust us</p>
 			<div class="companies__block">
-				<div class="companies__item companies__item--dark-blue"><img src="../img/png/hillel-logo.png" alt="hillel-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-green"><img src="../img/png/wanna-biz-logo.png" alt="wanna-biz-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-orange"><img src="../img/png/tapgerine-logo.png" alt="tapgerine-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--violet"><img src="../img/png/3d-look-logo.png" alt="3d-look-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--orange"><img src="../img/png/orangear-logo.png" alt="orangear-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--light-grey"><img src="../img/png/adtelligent-logo.png" alt="adtelligent-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-red"><img src="../img/png/clicky-logo.png" alt="clicky-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--light-blue"><img src="../img/png/ecoleasing-logo.png" alt="ecoleasing-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--grey"><img src="../img/png/infratek-logo.png" alt="infratek-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dark-violet"><img src="../img/png/city-park-logo.png" alt="city-park-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--dirty"><img src="../img/png/art-print-logo.png" alt="art-print-logo" class="companies__img"></div>
-				<div class="companies__item companies__item--black"><img src="../img/png/ulitimate-card-logo.png" alt="ulitimate-card-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-blue"><img src="../img/png/hillel-logo.png"
+						alt="hillel-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-green"><img src="../img/png/wanna-biz-logo.png"
+						alt="wanna-biz-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-orange"><img src="../img/png/tapgerine-logo.png"
+						alt="tapgerine-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--violet"><img src="../img/png/3d-look-logo.png"
+						alt="3d-look-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--orange"><img src="../img/png/orangear-logo.png"
+						alt="orangear-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-grey"><img src="../img/png/adtelligent-logo.png"
+						alt="adtelligent-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-red"><img src="../img/png/clicky-logo.png"
+						alt="clicky-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--light-blue"><img src="../img/png/ecoleasing-logo.png"
+						alt="ecoleasing-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--grey"><img src="../img/png/infratek-logo.png"
+						alt="infratek-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dark-violet"><img src="../img/png/city-park-logo.png"
+						alt="city-park-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--dirty"><img src="../img/png/art-print-logo.png"
+						alt="art-print-logo" class="companies__img"></div>
+				<div class="companies__item companies__item--black"><img src="../img/png/ulitimate-card-logo.png"
+						alt="ulitimate-card-logo" class="companies__img"></div>
 			</div>
 		</div>
 	</section>
-    <footer class="main-footer">
+	<footer class="main-footer">
 		<div class="main-footer__container container">
 			<div class="main-footer__contacts contacts">
 				<div class="contacts__address-and-map">
@@ -158,9 +192,11 @@
 					<a class="contacts__link-map"><span class="contacts__map">On map</span></a>
 				</div>
 				<div class="contacts__phone-and-net">
-					<svg class="contacts__facebook">
-						<use xlink:href="../img/svg/sprite.svg#facebook"></use>	
-					</svg>
+					<a class="contacts__link" href="https://www.facebook.com/">
+						<svg class="contacts__facebook">
+							<use xlink:href="../img/svg/sprite.svg#facebook"></use>
+						</svg>
+					</a>
 					<span class="contacts__phone">0800 211 927</span>
 					<a class="contacts__link-email"><span class="contacts__email">contact@forstudy.space</span></a>
 				</div>
@@ -171,4 +207,5 @@
 		</div>
 	</footer>
 </body>
+
 </html>
